--- a/todousado.html
+++ b/todousado.html
@@ -115,10 +115,10 @@
     }
 
     .showbutton {
-      display: none;
+      display: block;
     }
 
-    .hidebutton {
+    .hidebutton, .image {
       display: none;
     }
 
@@ -190,7 +190,7 @@
     </script>
     <section>
       <h1>
-        Todo usado version 5
+        Todo usado version 6
       </h1>
       <!--<img src="rsz_family.jpg" alt="Ticket to Ride on table" width="900" class="center">-->
       <p>Todos los productos son usados y se retiran por mi domicilio.</p>
@@ -209,7 +209,7 @@
             </li>
             <!--Fin Titulo-->
             <div class="center">
-              <img id="image00001" src="https://media.publit.io/file/USADOS00001.png">
+              <img id="image00001" src="https://media.publit.io/file/USADOS00001.png" class="image">
             </div>
             <li>
                 <div class="numero"></div>
