--- a/todousado.html
+++ b/todousado.html
@@ -181,7 +181,7 @@
       }
       function hide(num) {
         alert("hide");
-        alert("${num}");
+        alert(num);
           document.getElementById('image${num}')
               .style.display = "none";
           document.getElementById('showID${num}')
@@ -192,7 +192,7 @@
     </script>
     <section>
       <h1>
-        Todo usado version 7
+        Todo usado version 8
       </h1>
       <!--<img src="rsz_family.jpg" alt="Ticket to Ride on table" width="900" class="center">-->
       <p>Todos los productos son usados y se retiran por mi domicilio.</p>
