--- a/todousado.html
+++ b/todousado.html
@@ -182,6 +182,7 @@
         alert(num);
         item = String(num).padStart(5, '0');
         alert(item);
+        alert('image${item}');
           document.getElementById('image${item}')
               .style.display = "none";
           document.getElementById('showID${item}')
@@ -192,7 +193,7 @@
     </script>
     <section>
       <h1>
-        Todo usado version 9
+        Todo usado version 10
       </h1>
       <!--<img src="rsz_family.jpg" alt="Ticket to Ride on table" width="900" class="center">-->
       <p>Todos los productos son usados y se retiran por mi domicilio.</p>
