--- a/todousado.html
+++ b/todousado.html
@@ -182,18 +182,18 @@
         alert(num);
         item = String(num).padStart(5, '0');
         alert(item);
-        alert('image${item}');
-          document.getElementById('image${item}')
+        alert("image"+item);
+          document.getElementById("image"+item)
               .style.display = "none";
-          document.getElementById('showID${item}')
+          document.getElementById("showID"+item)
               .style.display = "block";
-          document.getElementById('hideID${item}')
+          document.getElementById("hideID"+item)
               .style.display = "none";
       }
     </script>
     <section>
       <h1>
-        Todo usado version 10
+        Todo usado version 11
       </h1>
       <!--<img src="rsz_family.jpg" alt="Ticket to Ride on table" width="900" class="center">-->
       <p>Todos los productos son usados y se retiran por mi domicilio.</p>
