--- a/todousado.html
+++ b/todousado.html
@@ -122,6 +122,10 @@
       display: none;
     }
 
+    .hidebutton, .showbutton {
+      height: 80;
+    }
+
     .item, .numero {
         width: 100;
         text-align: right;
@@ -224,15 +228,18 @@
                   Esconder Imagen
                 </button>
             </li>
+            <div class="center">
+              <img id="image00002" src="https://media.publit.io/file/USADOS00002.png" class="image">
+            </div>
             <li>
                 <div class="numero"></div>
                 <div class="item">Mas Cosa</div>
                 <div class="item">30000 Pesos</div>
                 <div class="item">Marzo</div>
-                <button id="showID00001" type="button" onclick="show(2)" class="showbutton">
+                <button id="showID00002" type="button" onclick="show(2)" class="showbutton">
                   Ver Imagen
                 </button>
-                <button id="hideID00001" type="button" onclick="hide(2)" class="hidebutton">
+                <button id="hideID00002" type="button" onclick="hide(2)" class="hidebutton">
                   Esconder Imagen
                 </button>
             </li>
