--- a/todousado.html
+++ b/todousado.html
@@ -123,7 +123,7 @@
     }
 
     .hidebutton, .showbutton {
-      height: 80;
+      height: 30;
     }
 
     .item, .numero {
@@ -195,7 +195,7 @@
     </script>
     <section>
       <h1>
-        Todo usado version 12
+        Todo usado version 5 Feb 2024
       </h1>
       <!--<img src="rsz_family.jpg" alt="Ticket to Ride on table" width="900" class="center">-->
       <p>Todos los productos son usados y se retiran por mi domicilio.</p>
