--- a/todousado.html
+++ b/todousado.html
@@ -1,6 +1,6 @@
 
 <head>
-  <link rel="shortcut icon" type="image/x-icon" href="ic_launcher.png">
+  <link rel="shortcut icon" type="image/x-icon" href="icons8-hot-price-tag-100.png">
   <meta http-equiv=Content-Type content="text/html; charset=utf-8">
   <title>Todo Usado</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -76,7 +76,7 @@
     h1 {
       margin-bottom: 0.25em;
       line-height: 1.5em;
-      color: #333;
+      color: royalblue;
     }
 
     p {
@@ -96,6 +96,7 @@
     .titulo {
         font-weight: bold;
         font-size: large;
+        color: royalblue;
     }
 
     li {
@@ -199,17 +200,18 @@
       </h1>
       <!--<img src="rsz_family.jpg" alt="Ticket to Ride on table" width="900" class="center">-->
       <p>Todos los productos son usados y se retiran por mi domicilio.</p>
-      <p>Los pedis con el numero de producto.</p>
-      <p>Si en disponibilidad dice "Ahora" los podes retirar cuanto antes. Caso contrario son para retirar los primeros dias de marzo, antes del 8 de Marzo.</p>
+      <p>Los pedis con el numero de item.</p>
+      <p>El boton de Ver hace que aparezca la imagen justo arriba de la linea del item.</p>
+      <p>Si en Disp dice "Ahora" los podes retirar cuanto antes. Caso contrario son para retirar los primeros dias de marzo, antes del 8 de Marzo.</p>
     </section>
     <section>
         <ul>
             <!--Titulo-->
             <li class="titulo">
-                <div>Número</div>
-                <div>Descripción</div>
-                <div>Precio</div>
-                <div>Disponibilidad</div>
+                <div>Item</div>
+                <div>Desc</div>
+                <div>$</div>
+                <div>Disp</div>
                 <div>Foto</div>
             </li>
             <!--Fin Titulo-->
@@ -222,10 +224,10 @@
                 <div class="item">15 USD</div>
                 <div class="item">Ahora</div>
                 <button id="showID00001" type="button" onclick="show(1)" class="showbutton">
-                  Ver Imagen
+                  Ver
                 </button>
                 <button id="hideID00001" type="button" onclick="hide(1)" class="hidebutton">
-                  Esconder Imagen
+                  Esconder
                 </button>
             </li>
             <div class="center">
@@ -237,10 +239,10 @@
                 <div class="item">30000 Pesos</div>
                 <div class="item">Marzo</div>
                 <button id="showID00002" type="button" onclick="show(2)" class="showbutton">
-                  Ver Imagen
+                  Ver
                 </button>
                 <button id="hideID00002" type="button" onclick="hide(2)" class="hidebutton">
-                  Esconder Imagen
+                  Esconder
                 </button>
             </li>
         </ul>
