--- a/todousado.html
+++ b/todousado.html
@@ -251,6 +251,51 @@
         }, {
         "desc": "Campera imperable azul Patagonia",
         "precio": "$175.000",
+        }, {
+        "desc": "Pantalon impermeable de adulto Patagonia",
+        "precio": "$40.000",
+        }, {
+        "desc": "Carpa de montaña The North Face 3 personas Lunarfire",
+        "precio": "$125.000",
+        }, {
+        "desc": "Bolso de dormir The North Face adulto Bluee Kazoo",
+        "precio": "$80.000",
+        }, {
+        "desc": "Bolso de dormir Egge Nylsuisse naranja para adulto",
+        "precio": "$50.000",
+        }, {
+        "desc": "Bolso de dormir Egge Nylsuisse naranja para adulto",
+        "precio": "$50.000",
+        }, {
+        "desc": "Bolso de dormir Calidor niño",
+        "precio": "$30.000",
+        }, {
+        "desc": "Bolso de dormir Calidor niño",
+        "precio": "$30.000",
+        }, {
+        "desc": "Portabicicleta techo auto parada",
+        "precio": "$10.000",
+        }, {
+        "desc": "Portabicicleta techo auto parada",
+        "precio": "$10.000",
+        }, {
+        "desc": "2 porta esque techo auto",
+        "precio": "$10.000",
+        }, {
+        "desc": "portaequipaje auto",
+        "precio": "$10.000",
+        }, {
+        "desc": "portaequipaje auto",
+        "precio": "$10.000",
+        }, {
+        "desc": "TV inteligente Noblex LED 108cm",
+        "precio": "$210.000",
+        }, {
+        "desc": "TV LG 42 pulgadas",
+        "precio": "$50.000",
+        }, {
+        "desc": "Casco bicicleta Raleigh R35 regulable",
+        "precio": "$18.000",
         }];
         var row = "";
         for(let i = 0;i < webElements.length;i++)
