--- a/todousado.html
+++ b/todousado.html
@@ -2,7 +2,7 @@
 <head>
   <link rel="shortcut icon" type="image/x-icon" href="icons8-hot-price-tag-100.png">
   <meta http-equiv=Content-Type content="text/html; charset=utf-8">
-  <title>Todo Usado</title>
+  <title>Pau y Dani - Todo Usado</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="author" content="Daniele Folatelli">
   <style>
@@ -185,7 +185,7 @@
     <script type = "text/javascript">
       const webElements = [{
         "desc": "2 ollas de montaña marca Alpine con manija en funda",
-        "precio": "$20.000",
+        "precio": "$9.000",
         }, {
         "desc": "Anorak rompeviento marca REI con bolsillos en funda",
         "precio": "$15.000",
@@ -194,37 +194,37 @@
         "precio": "$10.000",
         }, {
         "desc": "Filtro de agua marca Pur con funda",
-        "precio": "$8.000",
+        "precio": "$5.000",
         }, {
         "desc": "Escalera de aluminio plegable de 4 tramos",
         "precio": "$120.000",
         }, {
         "desc": "Monitor Samsung LED 22 pulgadas",
-        "precio": "$60.000",
+        "precio": "$75.000",
         }, {
         "desc": "Teclado Genius USB ",
-        "precio": "$7.000",
+        "precio": "$5.000",
         }, {
         "desc": "Casco bicicleta marca Cool para adulto",
-        "precio": "$20.000",
+        "precio": "$6.000",
         }, {
         "desc": "Palo trekking regulable marca Masters",
-        "precio": "$15.000",
+        "precio": "$9.000",
         }, {
         "desc": "Palo trekking regulable marca Waterdog",
-        "precio": "$10.000",
+        "precio": "$7.000",
         }, {
         "desc": "Dos Palos de trekking marca The Fit Life con funda",
-        "precio": "$25.000",
+        "precio": "$15.000",
         }, {
         "desc": "Zapatos de montaña impremeables marca Columbia talle 43",
-        "precio": "$10.000",
+        "precio": "$35.000",
         }, {
         "desc": "Campera imperable azul Patagonia",
-        "precio": "$175.000",
+        "precio": "$185.000",
         }, {
         "desc": "Pantalon impermeable de adulto Patagonia",
-        "precio": "$40.000",
+        "precio": "$48.000",
         }, {
         "desc": "Carpa de montaña The North Face 3 personas Lunarfire",
         "precio": "$125.000",
@@ -245,22 +245,22 @@
         "precio": "$30.000",
         }, {
         "desc": "Portabicicleta techo auto parada",
-        "precio": "$10.000",
+        "precio": "$5.000",
         }, {
         "desc": "Portabicicleta techo auto parada",
-        "precio": "$10.000",
+        "precio": "$5.000",
         }, {
         "desc": "2 porta esque techo auto",
-        "precio": "$10.000",
+        "precio": "$5.000",
         }, {
         "desc": "portaequipaje auto",
-        "precio": "$10.000",
+        "precio": "$5.000",
         }, {
         "desc": "portaequipaje auto",
-        "precio": "$10.000",
+        "precio": "$5.000",
         }, {
         "desc": "TV inteligente Noblex LED 108cm",
-        "precio": "$210.000",
+        "precio": "$215.000",
         }, {
         "desc": "TV LG 42 pulgadas",
         "precio": "$50.000",
@@ -325,8 +325,11 @@
     </script>
     <section>
       <h1>
-        Actualizada Version 5 de Febrero 2024
+        Lista de Pau y Dani
       </h1>
+      <p>
+        Actualizada Version 6 de Febrero 2024
+      </p>
       <p>Todos los productos son usados y se retiran por mi domicilio.</p>
       <p>Los pedis con el numero de item.</p>
       </section>
