--- a/todousado.html
+++ b/todousado.html
@@ -138,6 +138,18 @@
         font-weight: bold;
     }
 
+    .enter {
+      padding: 12px;
+      background: #f2f2f2;
+      border-radius: 8px;
+      width: 300 px;
+      border: none;
+    }
+
+    #filtrar {
+      margin-left: 30px;
+    }
+
     @media only screen and (min-device-width: 568px) {
       .center {
         width: 90%;
