--- a/todousado.html
+++ b/todousado.html
@@ -322,7 +322,7 @@
         {
           item = String(i+1).padStart(5, '0');
           row = row + "<div class='center'>"
-            + "<img id='image" + item + "' src='https://media.publit.io/file/USADOS" + item + ".png' class='image'>"
+            + "<img id='image" + item + "' src='https://media.publit.io/file/USADOS" + item + ".jpg' class='image'>"
             + "</div>"
             + "<li id='row" + item + "'>"
             + "<div class='numero'>" + (i+1) + ".</div>"
