--- a/todousado.html
+++ b/todousado.html
@@ -130,6 +130,7 @@
 
     .hidebutton, .showbutton {
       height: 30;
+      font-size: 18px;
     }
     
     .numero {
@@ -148,6 +149,8 @@
 
     #filtrar {
       margin-left: 30px;
+      height: 30;
+      font-size: 18px;
     }
 
     @media only screen and (min-device-width: 568px) {
@@ -168,7 +171,7 @@
     }
 
     .footer {
-      font-size: 12px;
+      font-size: 18px;
       text-align: center;
       clear: both;
       padding-top: 24px;
@@ -339,11 +342,12 @@
       <h1>
         Lista de Pau y Dani
       </h1>
-      <p>
+      <p style="font-size: 13px; margin-left: 20px;">
         Actualizada Version 6 de Febrero 2024
       </p>
-      <p>Todos los productos son usados y se retiran por mi domicilio.</p>
+      <p>Todos los productos son usados y se retiran por el barrio San Andres.</p>
       <p>Los pedis con el numero de item.</p>
+      <p>Se puede ver la imagen de cada item presionando el boton de Ver.</p>
       </section>
       <section>
         <p>Se puede filtrar por la descripción.</p>
