--- a/todousado.html
+++ b/todousado.html
@@ -279,7 +279,7 @@
         "precio": "$215.000",
         }, {
         "desc": "TV LG 42 pulgadas",
-        "precio": "$50.000",
+        "precio": "$140.000",
         }, {
         "desc": "Casco bicicleta Raleigh R35 regulable",
         "precio": "$18.000",
@@ -302,7 +302,7 @@
         "desc": "Pizarra doble con rollo",
         "precio": "$60.000",
         }, {
-        "desc": "Caartera Ty",
+        "desc": "Cartera Ty",
         "precio": "$8.000",
         }];
       function show(num) {
