--- a/todousado.html
+++ b/todousado.html
@@ -260,14 +260,14 @@
         "desc": "Bolso de dormir Calidor niño",
         "precio": "$30.000",
         }, {
-        "desc": "Portabicicleta techo auto parada",
-        "precio": "$5.000",
+        "desc": "Bandeja de decoración",
+        "precio": "$10.000",
         }, {
-        "desc": "Portabicicleta techo auto parada",
-        "precio": "$5.000",
+        "desc": "Secador de platos",
+        "precio": "$18.000",
         }, {
-        "desc": "2 porta esque techo auto",
-        "precio": "$5.000",
+        "desc": "Jaula decoración",
+        "precio": "$15.000",
         }, {
         "desc": "portaequipaje auto",
         "precio": "$5.000",
@@ -304,6 +304,12 @@
         }, {
         "desc": "Cartera Ty",
         "precio": "$8.000",
+        }, {
+        "desc": "Mesita de luz nordica",
+        "precio": "$15.000",
+        }, {
+        "desc": "Mesita de luz nordica",
+        "precio": "$15.000",
         }];
       function show(num) {
         item = String(num).padStart(5, '0');
@@ -360,8 +366,9 @@
         Lista de Pau y Dani
       </h1>
       <p style="font-size: 13px; margin-left: 20px;">
-        Actualizada Version 6 de Febrero 2024
+        Actualizada Version 7 de Febrero 2024
       </p>
+      <p>Revisar periodicamente la lista ya que se borra lo que se vende y se agregan items.</p>
       <p>Todos los productos son usados y se retiran por el barrio San Andres.</p>
       <p>Los pedis con el numero de item.</p>
       <p>Se puede ver la imagen de cada item presionando el boton de Ver.</p>
