--- a/todousado.html
+++ b/todousado.html
@@ -310,6 +310,9 @@
         }, {
         "desc": "Mesita de luz nordica",
         "precio": "$15.000",
+        }, {
+        "desc": "Mueble de pinotea",
+        "precio": "$120.000",
         }];
       function show(num) {
         item = String(num).padStart(5, '0');
