--- a/todousado.html
+++ b/todousado.html
@@ -313,6 +313,24 @@
         }, {
         "desc": "Mueble de pinotea",
         "precio": "$120.000",
+        }, {
+        "desc": "Portavela o florero de decoración (2)",
+        "precio": "$15.000",
+        }, {
+        "desc": "Balanza de pie",
+        "precio": "$18.000",
+        }, {
+        "desc": "Banquito",
+        "precio": "$15.000",
+        }, {
+        "desc": "Sillon matero",
+        "precio": "$25.000",
+        }, {
+        "desc": "Sillon Pie de Cama",
+        "precio": "$35.000",
+        }, {
+        "desc": "Espejo antiguo 1.60 x 60",
+        "precio": "$150.000",
         }];
       function show(num) {
         item = String(num).padStart(5, '0');
