--- a/todousado.html
+++ b/todousado.html
@@ -329,8 +329,11 @@
         "desc": "Sillon Pie de Cama",
         "precio": "$35.000",
         }, {
-        "desc": "Espejo antiguo 1.60 x 60",
+        "desc": "Espejo antiguo 160 cm x 60 cm",
         "precio": "$150.000",
+        }, {
+        "desc": "Espejo antiguo 85 cm X 60 cm",
+        "precio": "$120.000",
         }];
       function show(num) {
         item = String(num).padStart(5, '0');
