--- a/todousado.html
+++ b/todousado.html
@@ -340,6 +340,15 @@
         }, {
         "desc": "Auriculares Hyperx",
         "precio": "$40.000",
+        }, {
+        "desc": "Pistola juguete Silenciadora Elite NERF FORTNITE con 10 balas cerradas",
+        "precio": "$45.000",
+        }, {
+        "desc": "Arco Prana Junior para adolescentes y 2 flechas",
+        "precio": "$60.000",
+        }, {
+        "desc": "Coleccion de 54 autitos de juguete y rueda Hot Wheels para guardar",
+        "precio": "$100.000",
         }];
       function show(num) {
         item = String(num).padStart(5, '0');
