--- a/todousado.html
+++ b/todousado.html
@@ -349,6 +349,21 @@
         }, {
         "desc": "Coleccion de 54 autitos de juguete y rueda Hot Wheels para guardar",
         "precio": "$100.000",
+        }, {
+        "desc": "Silla de auto para niño de hasta 12 años",
+        "precio": "$30.000",
+        }, {
+        "desc": "Silla de auto para niño de hasta 12 años",
+        "precio": "$30.000",
+        }, {
+        "desc": "Juego de 6 sillas estilo Windsore",
+        "precio": "$150.000",
+        }, {
+        "desc": "Picadora Moulinex",
+        "precio": "$30.000",
+        }, {
+        "desc": "Licuadora Phillips",
+        "precio": "$18.000",
         }];
       function show(num) {
         item = String(num).padStart(5, '0');
