--- a/todousado.html
+++ b/todousado.html
@@ -363,7 +363,13 @@
         "precio": "$30.000",
         }, {
         "desc": "Licuadora Phillips",
-        "precio": "$18.000",
+        "precio": "$15.000",
+        }, {
+        "desc": "Pava electrica Phillips",
+        "precio": "$15.000",
+        }, {
+        "desc": "Olla extra grande 28cm Tramontina",
+        "precio": "$40.000",
         }];
       function show(num) {
         item = String(num).padStart(5, '0');
