--- a/todousado.html
+++ b/todousado.html
@@ -370,6 +370,9 @@
         }, {
         "desc": "Olla extra grande 28cm Tramontina",
         "precio": "$40.000",
+        }, {
+        "desc": "Olla a presión Marmicoc",
+        "precio": "$30.000",
         }];
       function show(num) {
         item = String(num).padStart(5, '0');
