--- a/todousado.html
+++ b/todousado.html
@@ -373,6 +373,39 @@
         }, {
         "desc": "Olla a presión Marmicoc",
         "precio": "$30.000",
+        }, {
+        "desc": "Ensaladera de losa blanca",
+        "precio": "$10.000",
+        }, {
+        "desc": "Ensaladera de madera",
+        "precio": "$15.000",
+        }, {
+        "desc": "Medidor de vidrio grande",
+        "precio": "$15.000",
+        }, {
+        "desc": "Mueble de madera maciza",
+        "precio": "$90.000",
+        }, {
+        "desc": "Termnos importados marca Maxso (precio cada uno)",
+        "precio": "$20.000",
+        }, {
+        "desc": "Tupper Maped Picnic (precio cada uno)",
+        "precio": "$8.000",
+        }, {
+        "desc": "Juego de comoda con 2 mesitas de luz (no salen en la foto)",
+        "precio": "$100.000",
+        }, {
+        "desc": "Juguetes muñeqas Barbie original (precio por cada muñequa)",
+        "precio": "$8.000",
+        }, {
+        "desc": "Juguetes muñeqas LOL original (precio por cada muñequa)",
+        "precio": "$5.000",
+        }, {
+        "desc": "Juguete Fischer-Price original Dinosaurio grande",
+        "precio": "$25.000",
+        },, {
+        "desc": "Sillas de jardin, juego completo",
+        "precio": "$20.000",
         }];
       function show(num) {
         item = String(num).padStart(5, '0');
