--- a/todousado.html
+++ b/todousado.html
@@ -406,6 +406,9 @@
         },, {
         "desc": "Sillas de jardin, juego completo",
         "precio": "$20.000",
+        }, {
+        "desc": "Muñequas Lallaloopsy originales (precio por cada muñequa)",
+        "precio": "$12.000",
         }];
       function show(num) {
         item = String(num).padStart(5, '0');
