--- a/todousado.html
+++ b/todousado.html
@@ -409,6 +409,27 @@
         }, {
         "desc": "Muñequas Lallaloopsy originales (precio por cada muñequa)",
         "precio": "$12.000",
+        }, {
+        "desc": "Bicicleta Mussetta Rodado 24 Vintage",
+        "precio": "$125.000",
+        }, {
+        "desc": "Bicicleta Blueray Rodado 24 ",
+        "precio": "80.000",
+        }, {
+        "desc": "Bicicleta Zenith Rodado 26",
+        "precio": "$60.000",
+        }, {
+        "desc": "Bicicleta Vairo Rodado 26",
+        "precio": "$60.000",
+        }, {
+        "desc": "Bicicleta GT Bikes Rodado 20 para prueba",
+        "precio": "$30.000",
+        }, {
+        "desc": "Bicicleta Raleigh Rodado 26",
+        "precio": "$100.000",
+        }, {
+        "desc": "Sillon Luis XV",
+        "precio": "$300.000",
         }];
       function show(num) {
         item = String(num).padStart(5, '0');
