--- a/todousado.html
+++ b/todousado.html
@@ -414,7 +414,7 @@
         "precio": "$125.000",
         }, {
         "desc": "Bicicleta Blueray Rodado 24 ",
-        "precio": "80.000",
+        "precio": "$80.000",
         }, {
         "desc": "Bicicleta Zenith Rodado 26",
         "precio": "$60.000",
